Fixed toggler icon color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,10 @@ h1{
          color:$star-wars-yellow;
      }
 
+     span{
+         color: $star-wars-yellow;
+     }
+
      a:hover{
          color: rgb(252, 236, 149);
      }
