--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,18 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Films</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Characters</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Planets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Species</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
         </ul>
