--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg main-nav">
-      <a class="navbar-brand" href="#">Star Wars Rails App</a>
+      <a class="navbar-brand" href="/">Star Wars Rails App</a>
       <button class ="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,22 +19,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Films</a>
+            <a class="nav-link" href="/films">Films</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Characters</a>
+            <a class="nav-link" href="/characters">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Planets</a>
+            <a class="nav-link" href="/planets">Planets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Species</a>
+            <a class="nav-link" href="/species">Species</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/pages/about">About</a>
           </li>
         </ul>
       </div>
