--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@
  @import 'bootstrap';
 $star-wars-yellow: #F9D71C;
 
+img{
+    max-height: 50vh;
+}
+
 body{
     background-color: #000;
     color: #FFF;
