--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,10 @@
             <a class="nav-link" href="/about">About</a>
           </li>
         </ul>
+        <%= form_tag(search_path, method: "get", class: "form-inline") do %>
+        <%= text_field_tag(:query, "", class: "form-control", placeholder: "Search Characters") %>
+        <%= submit_tag("Search", class: "btn btn-outline-warning mx-1") %>
+      <% end %>
       </div>
     </nav>
     <%= yield %>
