--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@ body{
 
 h1{
     color: $star-wars-yellow;
+    margin-left: 5px;
 }
 
 a{
@@ -59,7 +60,7 @@ a:hover{
     margin-right: 5px;
     article{
         background-color: #222222;
-        max-width: 30vw;
+        max-width: 50vw;
     }
 }
 
